syntax = "proto3";

package resources.documents;
option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/documents;documents";

import "resources/documents/access.proto";
import "resources/documents/category.proto";
import "resources/documents/documents.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "resources/vehicles/vehicles.proto";
import "validate/validate.proto";

message Template {
  uint64 id = 1; // @gotags: alias:"id"
  optional resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  optional resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
  resources.documents.DocumentCategory category = 4; // @gotags: alias:"category"
  string title = 5 [(validate.rules).string.min_len = 3]; // @gotags: alias:"title"
  string description = 6 [(validate.rules).string.max_len = 255]; // @gotags: alias:"description"
  string content_title = 7 [(validate.rules).string.min_len = 3]; // @gotags: alias:"content_title"
  string content = 8 [(validate.rules).string = {min_len: 12, max_bytes: 12288}]; // @gotags: alias:"content"
  resources.documents.TemplateSchema schema = 9; // @gotags: alias:"schema"
  int32 creator_id = 10; // @gotags: alias:"creator_id"
  optional resources.users.UserShort creator = 11;
  string job = 12 [(validate.rules).string.max_len = 50]; // @gotags: alias:"job"
  repeated TemplateJobAccess job_access = 13;
}

message TemplateShort {
  uint64 id = 1; // @gotags: alias:"id"
  optional resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  optional resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
  resources.documents.DocumentCategory category = 4; // @gotags: alias:"category"
  string title = 5 [(validate.rules).string.min_len = 3]; // @gotags: alias:"title"
  string description = 6 [(validate.rules).string.max_len = 255]; // @gotags: alias:"description"
  resources.documents.TemplateSchema schema = 7; // @gotags: alias:"schema"
  int32 creator_id = 8; // @gotags: alias:"creator_id"
  optional resources.users.UserShort creator = 9;
  string job = 10 [(validate.rules).string.max_len = 50]; // @gotags: alias:"job"
}

message TemplateSchema {
  TemplateRequirements requirements = 1;
}

message TemplateRequirements {
  optional ObjectSpecs documents = 1;
  optional ObjectSpecs users = 2;
  optional ObjectSpecs vehicles = 3;
}

message ObjectSpecs {
  optional bool required = 1;
  optional int64 min = 2;
  optional int64 max = 3;
}

message TemplateData {
  resources.users.User activeChar = 1;
  repeated resources.documents.DocumentShort documents = 2 [(validate.rules).repeated.max_items = 5];
  repeated resources.users.User users = 3 [(validate.rules).repeated.max_items = 5];
  repeated resources.vehicles.Vehicle vehicles = 4 [(validate.rules).repeated.max_items = 5];
}

message TemplateJobAccess {
  uint64 id = 1; // @gotags: alias:"id"
  optional resources.timestamp.Timestamp created_at = 2; // @gotags: alias:"created_at"
  optional resources.timestamp.Timestamp updated_at = 3; // @gotags: alias:"updated_at"
  uint64 template_id = 4; // @gotags: alias:"template_id"
  string job = 5 [(validate.rules).string.max_len = 50]; // @gotags: alias:"job"
  string job_label = 6 [(validate.rules).string.max_len = 50]; // @gotags: alias:"job_label"
  int32 minimumGrade = 7 [(validate.rules).int32.gt = 0]; // @gotags: alias:"minimum_grade"
  string job_grade_label = 8 [(validate.rules).string.max_len = 50]; // @gotags: alias:"job_grade_label"
  resources.documents.ACCESS_LEVEL access = 9 [(validate.rules).enum.defined_only = true]; // @gotags: alias:"access"
  int32 creator_id = 10; // @gotags: alias:"creator_id"
  optional resources.users.UserShort creator = 11; // @gotags: alias:"creator"
}
